# sgx-mnist

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  run.sh
rust-autograd/: Cargo.toml
src/: decrypt_output.rs  encrypt_input.rs  predict.rs  train.rs
