[package]
name = "sgx-mnist"
version = "0.1.0"
authors = ["Guanyu Feng <jiguanglizipao@gmail.com>"]

[dependencies]
ndarray = { version = "0.10.11" , features = ["serde-1"] }
autograd = { version = "0.9.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "predict"
path = "src/predict.rs"
