[package]
name = "sgx-mnist"
version = "0.1.0"
authors = ["Guanyu Feng <jiguanglizipao@gmail.com>"]

[dependencies]
ndarray = { version = "0.10.11" , features = ["serde-1"] }
autograd = { version = "0.9.1" }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
bincode = "1.1.3"
aes = "0.3.2"
hex-literal = "0.2.0"
block-modes = "0.3.3"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "predict"
path = "src/predict.rs"

[[bin]]
name = "encrypt_input"
path = "src/encrypt_input.rs"

[[bin]]
name = "decrypt_output"
path = "src/decrypt_output.rs"
